<?xml version="1.0" encoding="utf-8"?>
<!-- Options menu for the CatalogActivity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_orange_theme"
        android:title="@string/action_orange_theme"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_blue_theme"
        android:title="@string/action_blue_theme"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_green_theme"
        android:title="@string/action_green_theme"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all_entries"
        android:title="@string/action_delete_all_entries"
        app:showAsAction="never" />
</menu>