<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#f2f2f2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/language_change"
            android:textSize="22sp" />

        <RadioGroup
            android:id="@+id/language_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:id="@+id/radioButtonFr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language_fr" />

            <RadioButton
                android:id="@+id/radioButtonEn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language_en" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:text="Cancel"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/validate_choice"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>

